02-k8s-nginx-canary-deployment/canary/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airtasker-task-canary
  namespace: airtasker
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%            
      maxUnavailable: 0       #for latency and HA 
  selector:
    matchLabels:
      app: airtasker-task-canary
  template:
    metadata:
      labels:
        app: airtasker-task-canary
    spec:
      securityContext: # Security not to run as root 
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: airtasker-task
          image: usarvesh/airtasker
          imagePullPolicy: Always   
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities: #removeing all admin or anyother capabilities or add capabilities when requried
              drop:
                - ALL 
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "256m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
