02-k8s-nginx-canary-deployment/canary/service.yaml
 
apiVersion: v1
kind: Service
metadata:
  name: airtasker-task-canary
  namespace: airtasker
spec:
  type: ClusterIP
  selector:
    app: airtasker-task-canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
