02-k8s-nginx-canary-deployment/canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airtasker-task-canary
  namespace: airtasker
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50" # 50% traffic to canary
spec:
  ingressClassName: nginx
  rules:
    - host: airtasker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airtasker-task-canary
                port:
                  number: 80
